# LYSO_geant4

./: CMakeLists.txt  README.md  carbon_2_5.mac  electron_2_5.mac  lyso_bt.cc  proton_15.mac  proton_2_5.mac  proton_2_5_Al_1mm.mac  proton_5.mac  proton_5_CNAO.mac  vis.mac
analysis/: README.txt  carbon_2_5.cc  carbon_2_5.root  electron_2_5.cc  electron_2_5.root  proton_15.cc  proton_15.root  proton_2_5.cc  proton_2_5.root  proton_2_5_Al_1mm.cc  proton_2_5_Al_1mm.root  proton_5.cc  proton_5.root  proton_5_CNAO.cc  proton_5_CNAO.root
analysis/OldNew/: README.txt  beam_test1_NEW.root  beam_test1_OLD.root  dep_geant_old.root  test_old_new.cc
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  run.cc  stepping.cc
